testdata/baselines/reference/submodule/conformance/checkJsdocTypeTag6.errors.txt
test.js(6,12): error TS8010: Type annotations can only be used in TypeScript files.
test.js(7,5): error TS2322: Type '(prop: any) => void' is not assignable to type '{ prop: string; }'.
test.js(26,12): error TS8010: Type annotations can only be used in TypeScript files.
test.js(27,7): error TS2322: Type '(more: any) => void' is not assignable to type '() => void'.
  Target signature provides too few arguments. Expected 1 or more, but got 0.
test.js(29,12): error TS8010: Type annotations can only be used in TypeScript files.
test.js(30,7): error TS2322: Type '(more: any) => void' is not assignable to type '() => void'.
  Target signature provides too few arguments. Expected 1 or more, but got 0.


==== test.js (6 errors) ====
    /** @type {number} */
    function f() {
        return 1
    }
    
    /** @type {{ prop: string }} */
               ~~~~~~~~~~~~~~~~
!!! error TS8010: Type annotations can only be used in TypeScript files.
    var g = function (prop) {
        ~
!!! error TS2322: Type '(prop: any) => void' is not assignable to type '{ prop: string; }'.
    }
    
    /** @type {(a: number) => number} */
    function add1(a, b) { return a + b; }
    
    /** @type {(a: number, b: number) => number} */
    function add2(a, b) { return a + b; }
    
    // TODO: Should be an error since signature doesn't match.
    /** @type {(a: number, b: number, c: number) => number} */
    function add3(a, b) { return a + b; }
    
    // Confirm initializers are compatible.
    // They can't have more parameters than the type/context.
    
    /** @type {() => void} */
    function funcWithMoreParameters(more) {} // error
    
    /** @type {() => void} */
               ~~~~~~~~~~
!!! error TS8010: Type annotations can only be used in TypeScript files.
    const variableWithMoreParameters = function (more) {}; // error
          ~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2322: Type '(more: any) => void' is not assignable to type '() => void'.
!!! error TS2322:   Target signature provides too few arguments. Expected 1 or more, but got 0.
    
    /** @type {() => void} */
               ~~~~~~~~~~
!!! error TS8010: Type annotations can only be used in TypeScript files.
    const arrowWithMoreParameters = (more) => {}; // error
          ~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2322: Type '(more: any) => void' is not assignable to type '() => void'.
!!! error TS2322:   Target signature provides too few arguments. Expected 1 or more, but got 0.
    
    ({
      /** @type {() => void} */
      methodWithMoreParameters(more) {}, // error
    });
    